--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -17,11 +17,25 @@ a {
 }
 
 .container {
-    max-width: 1140px;
-    padding: 0 15px;
     margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1140px;
+
+    &--sm {
+        max-width: 840px;
+    }
 }
 
-.text-right{
+.text-right {
     text-align: right;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
