--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -7,13 +7,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 30px 0 74px;
 }
 
 .header__top-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 30px;
 }
 
 .header__title { 
