--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -39,3 +39,10 @@ a {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+.title{
+    font-size: 36px;
+    font-family: $font-accent;
+    color: $accent;
+    font-weight: 700;
+}
