--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,6 @@
 @import "blocks/header";
 @import "blocks/nav";
 @import "blocks/info";
-@import "blocks/benefits"
+@import "blocks/benefits";
+@import "blocks/appartments";
+@import "blocks/card";
