--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,7 @@
 @import "blocks/benefits";
 @import "blocks/appartments";
 @import "blocks/card";
+@import "blocks/cta";
+@import "blocks/form";
+@import "blocks/video";
+@import "blocks/section-map";
