--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -40,9 +40,14 @@ a {
     overflow: hidden;
 }
 
-.title{
+.title {
     font-size: 36px;
     font-family: $font-accent;
+    color: $accent;
+    font-weight: 700;
+}
+
+.link-bold {
     color: $accent;
     font-weight: 700;
 }
