--- a/scss/blocks/_appartments.scss
+++ b/scss/blocks/_appartments.scss
@@ -1,3 +1,14 @@
+.appartments {
+    position: relative;
+
+    &::before {
+		content: "III";
+		@include decorNumber;
+		right: calc(50% + 555px);
+		transform: translateX(50%);
+	}
+}
+
 .appartments__title{
     margin-bottom: 88px;
 }
