--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "base/reset";
 @import "base/vars";
+@import "base/mixins";
 @import "base/base";
 
 @import "blocks/header";
@@ -12,3 +13,5 @@
 @import "blocks/form";
 @import "blocks/video";
 @import "blocks/section-map";
+@import "blocks/feedback";
+@import "blocks/footer";
