Сделал хедер адаптивным

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -8,12 +8,77 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 30px 0 74px;
+
+    @include mediaTablet {
+        min-height: unset;
+
+        row-gap: 50px;
+    }
 }
 
 .header__top-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header__top-row--mobile {
+    position: fixed;
+    background-color: $dark;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
+    justify-content: start;
+    padding: 40px 0;
+
+    .header__nav {
+        display: block;
+    }
+
+    .nav__list {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+    }
+
+    .header__nav-btn{
+        position: fixed;
+        top: 50px;
+        right: 15px;
+    }
+}
+
+.nav-icon-btn--active div{
+    &:first-child {
+        transform: rotate(-45deg) translate(0, 20px);
+    }
+
+    &:nth-child(2) {
+        display: none;
+    }
+
+    &:last-child {
+        transform: rotate(45deg) translate(0, -20px);
+    }
+}
+
+.header__nav {
+    @include mediaTablet {
+        display: none;
+    }
+}
+
+.header__nav-btn{
+    display: none;
+
+    @include mediaTablet {
+        display: block;
+    }
 }
 
 .header__title { 
@@ -24,6 +89,11 @@
     color: $accent;
     padding-bottom: 121px;
     position: relative;
+
+    @include mediaTablet {
+        font-size: 32px;
+        padding-bottom: 100px;
+    }
 }
 
 .header__title-icon {
@@ -37,4 +107,11 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 100px;
+
+    @include mediaTablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+    }
 }
