--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,10 @@ a:hover {
   font-weight: 700;
 }
 
+.no-scroll {
+  overflow-y: hidden;
+}
+
 .header {
   min-height: 840px;
   background: linear-gradient(180deg, #242B33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242B33 92.19%), url("../images/header/header-bg.jpg"), lightgray 50%/cover no-repeat;
@@ -148,11 +152,70 @@ a:hover {
   justify-content: space-between;
   padding: 30px 0 74px;
 }
+@media screen and (max-width: 999px) {
+  .header {
+    min-height: unset;
+    row-gap: 50px;
+  }
+}
 
 .header__top-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header__top-row--mobile {
+  position: fixed;
+  background-color: #242B33;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 50px;
+  justify-content: start;
+  padding: 40px 0;
+}
+.header__top-row--mobile .header__nav {
+  display: block;
+}
+.header__top-row--mobile .nav__list {
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+}
+.header__top-row--mobile .header__nav-btn {
+  position: fixed;
+  top: 50px;
+  right: 15px;
+}
+
+.nav-icon-btn--active div:first-child {
+  transform: rotate(-45deg) translate(0, 20px);
+}
+.nav-icon-btn--active div:nth-child(2) {
+  display: none;
+}
+.nav-icon-btn--active div:last-child {
+  transform: rotate(45deg) translate(0, -20px);
+}
+
+@media screen and (max-width: 999px) {
+  .header__nav {
+    display: none;
+  }
+}
+
+.header__nav-btn {
+  display: none;
+}
+@media screen and (max-width: 999px) {
+  .header__nav-btn {
+    display: block;
+  }
 }
 
 .header__title {
@@ -163,6 +226,12 @@ a:hover {
   color: #D4C17F;
   padding-bottom: 121px;
   position: relative;
+}
+@media screen and (max-width: 999px) {
+  .header__title {
+    font-size: 32px;
+    padding-bottom: 100px;
+  }
 }
 
 .header__title-icon {
@@ -177,6 +246,14 @@ a:hover {
   grid-template-columns: repeat(2, 1fr);
   gap: 100px;
 }
+@media screen and (max-width: 999px) {
+  .header__bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+  }
+}
 
 .nav {
   font-size: 14px;
@@ -186,6 +263,20 @@ a:hover {
 .nav__list {
   display: flex;
   gap: 40px;
+}
+
+.nav-icon-btn {
+  width: 40px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-icon {
+  height: 2px;
+  width: 100%;
+  background-color: #ffffff;
 }
 
 .info {
@@ -199,16 +290,26 @@ a:hover {
   content: "";
   position: absolute;
   left: 0;
-  top: 0;
+  top: 50%;
   width: 21px;
   height: 21px;
+  transform: translateY(-50%);
   background-repeat: no-repeat;
+  background-position: center;
 }
 .info--map::before {
   background-image: url("../images/header/map.svg");
 }
 .info--tel::before {
   background-image: url("../images/header/phone.svg");
+}
+@media screen and (max-width: 999px) {
+  .info {
+    font-size: 14px;
+  }
+  .info--map, .info--tel {
+    padding-left: 26px;
+  }
 }
 
 .benefits {
