--- a/scss/blocks/_info.scss
+++ b/scss/blocks/_info.scss
@@ -10,11 +10,13 @@
 
             position: absolute;
             left: 0;
-            top: 0;
+            top: 50%;
             width: 21px;
             height: 21px;
+            transform: translateY(-50%);
 
             background-repeat: no-repeat;
+            background-position: center;
         }
     }
 
@@ -24,5 +26,13 @@
 
     &--tel::before {
         background-image: url("../images/header/phone.svg");
+    }
+
+    @include mediaTablet {
+        font-size: 14px;
+
+        &--map, &--tel {
+            padding-left: 26px;
+        }
     }
 }
