--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 
 @import "blocks/header";
 @import "blocks/nav";
+@import "blocks/nav-icon";
 @import "blocks/info";
 @import "blocks/benefits";
 @import "blocks/appartments";
